src/includes/hero.css
.hero {
  display: block;
  width: var(--container-width);
  max-width: 100%;
  margin: calc(var(--content-hero-bleed) * -1) auto 2em;

}

.hero__media {
  box-shadow:
    0 0.125em 0.5em hsl(275deg 40% 15% / 0.1),
    0 0.25em 2em hsl(275deg 30% 10% / 0.4);
}

.hero__caption {
  padding: var(--container-padding);
  font-style: italic;
}

@media (prefers-color-scheme: dark) {
  .hero__media {
    box-shadow:
      0 0.125em 1em hsl(275deg 50% 20% / 0.3),
      0 0.25em 2.5em hsl(275deg 40% 10% / 0.6);
  }
}

